force-app/main/default/objects/ChecklistItem__mdt/ChecklistItem__mdt.object-meta.xml
<CustomObject>
    <label>Checklist Item</label>
    <pluralLabel>Checklist Items</pluralLabel>
</CustomObject>