force-app/main/default/objects/ChecklistItem__mdt/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <label>Checklist</label>
    <referenceTo>ChecklistConfiguration__mdt</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>