force-app/main/default/objects/ChecklistItem__mdt/fields/CompareToField__c.field-meta.xml
<CustomField>
    <fullName>CompareToField__c</fullName>
    <label>Compare To Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>