force-app/main/default/objects/ChecklistItem__mdt/fields/Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label__c</fullName>
    <label>Custom Label</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>