force-app/main/default/objects/ChecklistItem__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>API Name of the field for the checklist item</description>
    <inlineHelpText>API Name of the field for the checklist item</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>