force-app/main/default/objects/ChecklistItem__mdt/fields/HasValidation__c.field-meta.xml
<CustomField>
    <fullName>HasValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Validation</label>
    <type>Checkbox</type>
</CustomField>