force-app/main/default/objects/ChecklistItem__mdt/fields/IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the field read only in the checklist?</description>
    <inlineHelpText>Is the field read only in the checklist?</inlineHelpText>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>