force-app/main/default/objects/ChecklistItem__mdt/fields/ValidationField__c.field-meta.xml
<CustomField>
    <fullName>ValidationField__c</fullName>
    <label>Validation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>