force-app/main/default/objects/ChecklistItem__mdt/fields/ValidationType__c.field-meta.xml
<CustomField>
    <fullName>ValidationType__c</fullName>
    <label>Validation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Is Custom Validation</fullName>
                <default>true</default>
                <label>Is Custom Validation</label>
            </value>
            <value>
                <fullName>Is Equal To</fullName>
            </value>
            <value>
                <fullName>Is Equal To Compared Field</fullName>
            </value>
            <value>
                <fullName>Is Greater Than</fullName>
            </value>
            <value>
                <fullName>Is Greater Than Compared Field</fullName>
            </value>
            <value>
                <fullName>Is Greater Than Or Equal To</fullName>
            </value>
            <value>
                <fullName>Is Greater Than Or Equal to Compared Field</fullName>
            </value>
            <value>
                <fullName>Is Less Than</fullName>
            </value>
            <value>
                <fullName>Is Less Than Compared Field</fullName>
            </value>
            <value>
                <fullName>Is Less Than Or Equal To</fullName>
            </value>
            <value>
                <fullName>Is Less Than Or Equal to Compared Field</fullName>
            </value>
            <value>
                <fullName>Is Not Null</fullName>
            </value>
            <value>
                <fullName>Is Null</fullName>
            </value>
            <value>
                <fullName>Is Equal To Value</fullName>
            </value>
            <value>
                <fullName>Is Less Than Value</fullName>
            </value>
            <value>
                <fullName>Is Less Than Or Equal To Value</fullName>
            </value>
            <value>
                <fullName>Is Greater Than Value</fullName>
            </value>
            <value>
                <fullName>Is Greater Than Or Equal To Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>