force-app/main/default/objects/ChecklistItem__mdt/fields/ValidationValue__c.field-meta.xml
<CustomField>
    <fullName>ValidationValue__c</fullName>
    <label>Validation Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>