force-app/main/default/objects/ChecklistItem__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Checklist__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>FieldName__c</columns>
    <columns>Order__c</columns>
    <columns>IsReadOnly__c</columns>
    <columns>HasValidation__c</columns>
    <columns>ValidationType__c</columns>
    <columns>ValidationField__c</columns>
    <columns>CompareToField__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Columns</label>
</ListView>